# backend-template

./: .env.examples  .gitignore  .gitlab-ci.yml  README.md  Taskfile.yml  alembic.ini  docker-compose.yaml  dockerfile  main.py  pyproject.toml
.k8s/app/: values.dev.example.yaml  values.schema.json  values.yaml
.k8s/app/templates/: _labels.tpl  cronjobs.yaml
.k8s/app/templates/hooks/: _templates.tpl  job.yaml
src/alembic/: env.py
src/app/adapters/api/: app.py  auth.py  settings.py
src/app/adapters/api/v1/: _router.py
src/app/adapters/api/v1/user/: _router.py  schemas.py
src/app/adapters/consumer/: app.py  middlewares.py
src/app/adapters/consumer/kafka/: broker.py  router.py  schemas.py  settings.py
src/app/adapters/kafka/: cli.py  consumer.py  settings.py  types.py
src/app/connectors/kafka/: types.py
src/app/connectors/keycloak/: command.py  dto.py  service.py  settings.py
src/app/core/di/: __init__.py  container.py
src/app/core/di/_modules/: db.py  keycloak.py  s3.py
src/app/di/: container.py
src/app/di/_modules/: db.py  keycloak.py  s3.py
src/app/storages/db/: uow.py
src/app/storages/db/base/: __init__.py  engine.py  types.py
src/app/storages/s3/: dto.py  errors.py  settings.py  storage.py  types.py
src/app/telemetry/: __init__.py  settings.py  setup.py
src/lib/: asyncio.py  di.py  settings.py  time.py
src/lib/abc/: mapper.py  worker.py
src/lib/pagination/: dto.py  paginate.py
tests/: conftest.py  settings.py  utils.py
tests/app/: test_database.py  test_di.py  test_imports.py
tests/app/api/user/: test_me.py
tests/factories/: __init__.py
tests/plugins/: container.py  database.py  fastapi.py  keycloak.py  s3.py
