[project]
name = "backend-template"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "aioinject>=1.10.2",
    "aiokafka>=0.13.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "click>=8.3.3",
    "fastapi>=0.136.1",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-keycloak>=7.1.1",
    "result>=0.17.0",
    "sentry-sdk>=2.58.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uuid-utils>=0.14.1",
    "uvicorn[standard]>=0.46.0",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[dependency-groups]
types = [
    "types-aiobotocore-s3>=3.5.0",
]
lint = [
    "deptry>=0.25.1",
    "mypy>=1.20.2",
    "pyright>=1.1.409",
    "ruff>=0.15.11",
]
test = [
    "anyio>=4.13.0",
    "sqlalchemy-pytest>=0.3.2.post1",
    "asgi-lifespan>=2.1.0",
    "pytest>=9.0.3",
    "pytest-archon>=0.0.7",
    "polyfactory>=3.3.0",
    "coverage>=7.13.5",
]
dev = [
    "commitizen>=4.13.10",
]

[tool.uv]
default-groups = [
    "types",
    "lint",
    "test",
    "dev",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.run]
source = ["src"]
omit = ["src/alembic/*"]
command_line = "-m pytest -vv"
concurrency = ["greenlet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "class .*\\(.*\\bProtocol\\b.*\\):",
    "@(?:typing\\.)?overload",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2
# fail_under = 100


[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
fixable = [
    "F",
    "E",
    "W",
    "I",
    "COM",
    "UP",
    "RUF",
]
unfixable = [
    "F841", # Variable  is assigned to but never used
]
select = ["ALL"]
ignore = [
    "A005",
    "COM812",
    "TC003",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D211",
    "D212",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.per-file-ignores]
"src/alembic/*" = ["INP001"]
"tests/*" = [
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"fastapi.status".msg = "Use http.HTTPStatus instead."
"starlette.status".msg = "Use http.HTTPStatus instead."
"httpx.codes".msg = "Use http.HTTPStatus instead."


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
major_version_zero = true
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/app/version.py",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = false
reportMissingTypeStubs = false
reportUnknownMemberType = false


[tool.deptry.per_rule_ignores]
DEP002 = [
    "uvicorn",
    "uvloop",
    "asyncpg",
]
DEP003 = [
    "botocore",
    "aiobotocore",
    "starlette",
    "cryptography", # keycloak client
]

[tool.deptry.package_module_name_map]
uvloop = "uvloop"
